make game socket service a singleton